ingress/gaon/ingress-gaon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: master1.innerinfo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gaon
            port:
              number: 80
